# CMake minimum version requirement
cmake_minimum_required(VERSION 3.10)

# Project name and version
project(Auction VERSION 1.0)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Add the src and tests directories
add_subdirectory(src)
add_subdirectory(tests)

# Include directories for header files
include_directories(src)
